--- a/documentation/components/FooterComponent.html
+++ b/documentation/components/FooterComponent.html
@@ -146,13 +146,27 @@
         <h3>Description</h3>
     </p>
     <p class="comment">
-        <p>del footer de la aplicación (enlaces, créditos, etc.).
-Normalmente se incluye una sola vez en el layout principal (por ejemplo,
-en <code>AppComponent</code>).</p>
+        <p>Componente de pie de página. Muestra contenido estático del sitio como créditos
+y derechos reservados, además de información dinámica como el tipo de cambio
+de dólar estadounidense (USD) a peso chileno (CLP).</p>
+<p>Este componente es standalone, por lo que debe importar <code>CommonModule</code>
+para usar directivas como <code>*ngIf</code> y <code>*ngFor</code>.
+Obtiene el tipo de cambio desde una API externa usando el servicio <code>Json</code>.</p>
+<p>API usada:
+<a href="https://api.exchangerate-api.com/v4/latest/USD">https://api.exchangerate-api.com/v4/latest/USD</a></p>
+<p>Se recomienda incluirlo una sola vez en la plantilla principal.</p>
+<p>Ejemplo:
+<code>&lt;app-footer&gt;&lt;/app-footer&gt;</code></p>
 
     </p>
 
 
+    <p class="comment">
+        <h3>Implements</h3>
+    </p>
+    <p class="comment">
+                <code>OnInit</code>
+    </p>
 
 
 <section data-compodoc="block-metadata">
@@ -181,6 +195,12 @@ en <code>AppComponent</code>).</p>
                 <td class="col-md-9"><code>true</code></td>
             </tr>
 
+            <tr>
+                <td class="col-md-3">imports</td>
+                <td class="col-md-9">
+                            <code>CommonModule</code>
+                </td>
+            </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
@@ -205,35 +225,272 @@ en <code>AppComponent</code>).</p>
     </table>
 </section>
 
+    <section data-compodoc="block-index">
+    <h3 id="index">Index</h3>
+    <table class="table table-sm table-bordered index-table">
+        <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#valorDolar" >valorDolar</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Methods</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#ngOnInit" >ngOnInit</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
 
 
 
 
+        </tbody>
+    </table>
+</section>
+
+    <section data-compodoc="block-constructor">
+    <h3 id="constructor">Constructor</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+<code>constructor(jsonService: <a href="../injectables/Json.html" target="_self">Json</a>)</code>
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/shared/footer/footer.ts:40</a></div>
+                            </td>
+                        </tr>
+
+                <tr>
+                    <td class="col-md-4">
+                            <div class="io-description"><p>Crea una instancia del componente e inyecta el servicio <code>Json</code>.</p>
+</div>
+                            <div>
+                                    <b>Parameters :</b>
+                                    <table class="params">
+                                        <thead>
+                                            <tr>
+                                                <td>Name</td>
+                                                    <td>Type</td>
+                                                <td>Optional</td>
+                                                    <td>Description</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>jsonService</td>
+                                                  
+                                                        <td>
+                                                                        <code><a href="../injectables/Json.html" target="_self" >Json</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                        <td>
+                                                                <p>Servicio inyectado que maneja la llamada HTTP a la API real.</p>
+
+                                                        </td>
+                                                </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+</section>
 
 
+
+
+
+    <section data-compodoc="block-methods">
+    
+    <h3 id="methods">
+        Methods
+    </h3>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="ngOnInit"></a>
+                    <span class="name">
+                        <span ><b>ngOnInit</b></span>
+                        <a href="#ngOnInit"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>ngOnInit()</code>
+                </td>
+            </tr>
+
+
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-line">Defined in <a href="" data-line="54"
+                                    class="link-to-prism">src/app/shared/footer/footer.ts:54</a></div>
+                        </td>
+                    </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                        <div class="io-description"><p>Inicializa el componente y solicita el tipo de cambio desde la API externa.
+El valor se guarda en <code>valorDolar</code>. Si ocurre un error, se asigna <code>null</code>.</p>
+</div>
+
+                        <div class="io-description">
+                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                        </div>
+                            <div class="io-description">
+                                
+                            </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+    <section data-compodoc="block-properties">
+    
+    <h3 id="inputs">
+        Properties
+    </h3>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="valorDolar"></a>
+                    <span class="name">
+                        <span ><b>valorDolar</b></span>
+                        <a href="#valorDolar"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>number | null</code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>null</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/shared/footer/footer.ts:40</a></div>
+                        </td>
+                    </tr>
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Valor actual del tipo de cambio de USD a CLP.
+Se obtiene dinámicamente desde la API externa al inicializar el componente.
+Es <code>null</code> mientras no se haya cargado o si ocurre un error.</p>
+</div>
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+</section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+import { CommonModule } from &#x27;@angular/common&#x27;;
+import { Json } from &#x27;../../services/json&#x27;;
+
 /**
- * @description Componente de pie de página. Contiene el contenido estático
- * del footer de la aplicación (enlaces, créditos, etc.).
+ * 
+ * Componente de pie de página. Muestra contenido estático del sitio como créditos
+ * y derechos reservados, además de información dinámica como el tipo de cambio
+ * de dólar estadounidense (USD) a peso chileno (CLP).
+ *
  * @usageNotes
- * Normalmente se incluye una sola vez en el layout principal (por ejemplo,
- * en &#x60;AppComponent&#x60;).
+ * Este componente es standalone, por lo que debe importar &#x60;CommonModule&#x60;
+ * para usar directivas como &#x60;*ngIf&#x60; y &#x60;*ngFor&#x60;.
+ * Obtiene el tipo de cambio desde una API externa usando el servicio &#x60;Json&#x60;.
+ *
+ * API usada:
+ * https://api.exchangerate-api.com/v4/latest/USD
+ *
+ * Se recomienda incluirlo una sola vez en la plantilla principal.
+ *
+ * Ejemplo:
+ * &#x60;&lt;app-footer&gt;&lt;/app-footer&gt;&#x60;
+ *
+ * @param jsonService Servicio inyectado que maneja la llamada HTTP a la API real.
  */
 @Component({
   selector: &#x27;app-footer&#x27;,
   standalone: true,
+  imports: [CommonModule],
   templateUrl: &#x27;./footer.html&#x27;,
   styleUrls: [&#x27;./footer.scss&#x27;],
 })
+export class FooterComponent implements OnInit {
+  /**
+   * Valor actual del tipo de cambio de USD a CLP.
+   * Se obtiene dinámicamente desde la API externa al inicializar el componente.
+   * Es &#x60;null&#x60; mientras no se haya cargado o si ocurre un error.
+   * @type {number | null}
+   */
+  valorDolar: number | null &#x3D; null;
 
-export class FooterComponent {}
-</code></pre>
+  /**
+   * Crea una instancia del componente e inyecta el servicio &#x60;Json&#x60;.
+   *
+   * @param jsonService Servicio inyectado que maneja la llamada HTTP a la API real.
+   */
+  constructor(private jsonService: Json) {}
+  /**
+   * Inicializa el componente y solicita el tipo de cambio desde la API externa.
+   * El valor se guarda en &#x60;valorDolar&#x60;. Si ocurre un error, se asigna &#x60;null&#x60;.
+   *
+   * @returns {void}
+   */
+  ngOnInit(): void {
+    this.jsonService.getCambioDolar().subscribe({
+      next: (data) &#x3D;&gt; {
+        this.valorDolar &#x3D; data?.rates?.CLP ?? null;
+      },
+      error: (err) &#x3D;&gt; {
+        console.error(&#x27;Error al obtener tipo de cambio&#x27;, err);
+        this.valorDolar &#x3D; null;
+      },
+    });
+  }
+}</code></pre>
     </div>
 
     <div class="tab-pane fade " id="templateData">
@@ -242,9 +499,14 @@ export class FooterComponent {}
   role&#x3D;&quot;contentinfo&quot;
   aria-label&#x3D;&quot;Pie de página del sitio&quot;
 &gt;
-  &lt;p class&#x3D;&quot;mb-0&quot;&gt;
-    © 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.
+  &lt;p class&#x3D;&quot;mb-0&quot;&gt;© 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.&lt;/p&gt;
+  &lt;p class&#x3D;&quot;mt-2&quot; *ngIf&#x3D;&quot;valorDolar !&#x3D;&#x3D; null; else cargando&quot;&gt;
+    Tipo de cambio USD → CLP: {{ valorDolar }}
   &lt;/p&gt;
+
+  &lt;ng-template #cargando&gt;
+    &lt;p class&#x3D;&quot;mt-2&quot;&gt;Cargando tipo de cambio...&lt;/p&gt;
+  &lt;/ng-template&gt;
 &lt;/footer&gt;
 </code></pre>
     </div>
@@ -281,8 +543,8 @@ export class FooterComponent {}
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><footer  class="bg-primary text-white text-center py-3 mt-4"  role="contentinfo"  aria-label="Pie de página del sitio">  <p class="mb-0">    © 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.  </p></footer></div>'
-    var COMPONENTS = [{'name': 'AdminComponent', 'selector': 'app-admin'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarritoComponent', 'selector': 'app-carrito'},{'name': 'CategoriaComponent', 'selector': 'app-categoria'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'PerfilComponent', 'selector': 'app-perfil'},{'name': 'RecuperarComponent', 'selector': 'app-recuperar'},{'name': 'RegistroComponent', 'selector': 'app-registro'},{'name': 'TemplatePlaygroundComponent', 'selector': 'template-playground-root'},{'name': 'ToastComponent', 'selector': 'app-toast'}];
+        var COMPONENT_TEMPLATE = '<div><footer  class="bg-primary text-white text-center py-3 mt-4"  role="contentinfo"  aria-label="Pie de página del sitio">  <p class="mb-0">© 2025 Juegos de Mesa Cuatro Esquinas. Todos los derechos reservados.</p>  <p class="mt-2" *ngIf="valorDolar !== null; else cargando">    Tipo de cambio USD → CLP: {{ valorDolar }}  </p>  <ng-template #cargando>    <p class="mt-2">Cargando tipo de cambio...</p>  </ng-template></footer></div>'
+    var COMPONENTS = [{'name': 'AdminComponent', 'selector': 'app-admin'},{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CarritoComponent', 'selector': 'app-carrito'},{'name': 'CategoriaComponent', 'selector': 'app-categoria'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavbarComponent', 'selector': 'app-navbar'},{'name': 'PerfilComponent', 'selector': 'app-perfil'},{'name': 'RecuperarComponent', 'selector': 'app-recuperar'},{'name': 'RegistroComponent', 'selector': 'app-registro'},{'name': 'ToastComponent', 'selector': 'app-toast'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'FooterComponent'};
 </script>
