--- a/documentation/components/HomeComponent.html
+++ b/documentation/components/HomeComponent.html
@@ -256,7 +256,7 @@ al menos <code>nombre</code>, <code>slug</code> (usado en <code>/categorias/:slu
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(jsonSrv: <a href="../injectables/Json.html" target="_self">Json</a>)</code>
+<code>constructor(jsonSrv: <a href="../injectables/JsonService.html" target="_self">JsonService</a>)</code>
                     </td>
                 </tr>
                         <tr>
@@ -285,7 +285,7 @@ al menos <code>nombre</code>, <code>slug</code> (usado en <code>/categorias/:slu
                                                         <td>jsonSrv</td>
                                                   
                                                         <td>
-                                                                        <code><a href="../injectables/Json.html" target="_self" >Json</a></code>
+                                                                        <code><a href="../injectables/JsonService.html" target="_self" >JsonService</a></code>
                                                         </td>
                                                   
                                                     <td>
@@ -409,7 +409,7 @@ necesarios para construir las tarjetas de navegación.</p>
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component } from &#x27;@angular/core&#x27;;
 import { RouterLink } from &#x27;@angular/router&#x27;;
-import { Json } from &#x27;../../services/json&#x27;;
+import { JsonService } from &#x27;../../services/json&#x27;;
 /**
  * Página de inicio. Muestra el listado de categorías disponibles
  * y enlaza a las rutas de detalle de categoría.
@@ -436,7 +436,7 @@ export class HomeComponent {
    * Inyecta el servicio JSON para cargar datos de assets.
    * @param jsonSrv Servicio de acceso a archivos JSON locales.
    */
-  constructor(private jsonSrv: Json) {}
+  constructor(private jsonSrv: JsonService) {}
 
   /**
    * Carga las categorías desde el archivo &#x60;categorias.json&#x60;.
